--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,3 +16,31 @@ jobs:
         with:
           python-version: 3.8
       - uses: pre-commit/action@v2.0.0
+
+  tests:
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -e .[testing]
+    - name: Run pytest
+      run: pytest --durations=10 --cov=sphinx_parttoc_numbering --cov-report=xml --cov-report=term-missing
+    - name: Create cov
+      run: coverage xml
+    - name: Upload to Codecov
+      if: matrix.python-version == 3.7
+      uses: codecov/codecov-action@v1
+      with:
+        name: sphinx-parttoc-numbering-pytest-py3.7
+        flags: pytests
+        file: ./coverage.xml
+        fail_ci_if_error: true
